# qingxier

./: README.md  package-lock.json  package.json  交付清单.md
.report_sources/: comprehensive.md.gz.b64  junit.xml.gz.b64  test-results.json.gz.b64  test-run-console.txt.gz.b64
admin/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
server/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.cjs  package.json  pyproject.toml  requirements.txt  tsconfig.build.json  tsconfig.json
server/qingxier_server/: __init__.py  api.py  asr.py  config.py  domain.py  errors.py  hardened_service.py  integrations.py  main.py  repository.py  security.py  services.py  websocket_api.py
server/scripts/: generate_test_summary.py  smoke_test.py
server/src/: app.module.ts  bootstrap.ts  main.ts
server/src/api/: controllers.ts  dto.ts  voice.gateway.ts
server/src/application/: helpers.ts  platform.service.ts  speech.service.ts
server/src/common/: auth.ts  errors.ts  exception.filter.ts  response.interceptor.ts  trace.middleware.ts
server/src/config/: app-config.ts
server/src/domain/: types.ts
server/src/infrastructure/: data-store.ts  integrations.ts
server/test/: business.e2e.spec.ts  core.e2e.spec.ts  extended.e2e.spec.ts  gateway-and-providers.spec.ts  helpers.ts  infrastructure.spec.ts
server/tests/: conftest.py  test_api.py  test_api_admin_dialog.py  test_api_health_profiles.py  test_api_sessions.py  test_api_tts.py  test_hardening.py  test_integrations.py  test_security_repository.py  test_websocket.py
tests/: base.py  (+9 more)
(+166 files in other folders)
