[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "qingxier-speech-server"
version = "1.2.0"
description = "庆喜儿 V1.1 自动方言、克隆音色与阿西唤醒词服务器"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "pydantic>=2.9,<3",
  "httpx>=0.27,<1",
  "pymongo>=4.10,<5",
  "paho-mqtt>=2.1,<3",
  "dashscope>=1.25.6,<2",
]

[tool.setuptools]
packages = ["qingxier_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
